--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             </div>
                           </div>
                           <div class="slider-card__image-container">
-                            <img srcset="/lumen/assets/images/books-320x323.png 320w, /lumen/assets/images/books-400x404.png 400w, /lumen/assets/images/books-505x512.png 505w" src="/lumen/assets/images/books-505x512.png" sizes="(min-width: 505px) 505px, 100vw" width="200" height="202" alt decoding="async" loading="lazy" class="slider-card__image">
+                            <img srcset="/lumen/assets/images/books-0x0.png 0w" src="/lumen/assets/images/books-0x0.png" sizes="(min-width: 0px) 0px, 100vw" width="200" height="200" alt decoding="async" loading="lazy" class="slider-card__image">
                           </div>
                         </div>
                       </li>
@@ -117,7 +117,7 @@
                             </div>
                           </div>
                           <div class="slider-card__image-container">
-                            <img srcset="/lumen/assets/images/books-320x323.png 320w, /lumen/assets/images/books-400x404.png 400w, /lumen/assets/images/books-505x512.png 505w" src="/lumen/assets/images/books-505x512.png" sizes="(min-width: 505px) 505px, 100vw" width="200" height="202" alt decoding="async" loading="lazy" class="slider-card__image">
+                            <img srcset="/lumen/assets/images/books-0x0.png 0w" src="/lumen/assets/images/books-0x0.png" sizes="(min-width: 0px) 0px, 100vw" width="200" height="200" alt decoding="async" loading="lazy" class="slider-card__image">
                           </div>
                         </div>
                       </li>
