--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                       </span></div>
                   </footer>
                 </div>
-                <img class="link-card__image" src="/src/assets/images/links/results.jpg" alt="">
+                <img srcset="/lumen/assets/images/results-320x214.jpg 320w, /lumen/assets/images/results-400x268.jpg 400w, /lumen/assets/images/results-640x429.jpg 640w, /lumen/assets/images/results-800x536.jpg 800w, /lumen/assets/images/results-880x586.jpg 880w" src="/lumen/assets/images/results-880x586.jpg" sizes="(min-width: 880px) 880px, 100vw" width="880" height="586" alt decoding="async" loading="lazy" class="link-card__image">
               </a>
               <a class="hero__grid-card link-card" href="/courses/code/">
                 <div class="link-card__body">
@@ -202,7 +202,7 @@
                       </span></div>
                   </footer>
                 </div>
-                <img class="link-card__image" src="/src/assets/images/links/it.png" alt="">
+                <img srcset="/lumen/assets/images/it-320x240.png 320w, /lumen/assets/images/it-400x300.png 400w, /lumen/assets/images/it-640x480.png 640w, /lumen/assets/images/it-800x600.png 800w, /lumen/assets/images/it-1024x768.png 1024w, /lumen/assets/images/it-1200x900.png 1200w" src="/lumen/assets/images/it-1200x900.png" sizes="(min-width: 1200px) 1200px, 100vw" width="1200" height="900" alt decoding="async" loading="lazy" class="link-card__image">
               </a>
             </div>
           </div>
