--- a/courses/analytic.html
+++ b/courses/analytic.html
@@ -164,7 +164,7 @@
                       <p class="course-card__duration">9 месяцев</p>
                       <h3 class="course-card__title">Бухгалтерия</h3>
                     </div>
-                    <img class="course-card__image" src="/src/assets/images/courses/accounting.png">
+                    <img srcset="/lumen/assets/images/accounting-320x320.png 320w, /lumen/assets/images/accounting-400x400.png 400w, /lumen/assets/images/accounting-507x507.png 507w" src="/lumen/assets/images/accounting-507x507.png" sizes="(min-width: 507px) 507px, 100vw" width="507" height="507" alt decoding="async" loading="lazy" class="course-card__image">
                   </a>
                 </li>
                 <li class="courses__list-item" data-js-course-item="{&quot;title&quot;:&quot;Бизнес&quot;,&quot;duration&quot;:&quot;6 месяцев&quot;}">
@@ -174,7 +174,7 @@
                       <p class="course-card__duration">6 месяцев</p>
                       <h3 class="course-card__title">Нейросети: полный курс</h3>
                     </div>
-                    <img class="course-card__image" src="/src/assets/images/courses/ai.png">
+                    <img srcset="/lumen/assets/images/ai-320x320.png 320w, /lumen/assets/images/ai-376x376.png 376w" src="/lumen/assets/images/ai-376x376.png" sizes="(min-width: 376px) 376px, 100vw" width="376" height="376" alt decoding="async" loading="lazy" class="course-card__image">
                   </a>
                 </li>
                 <li class="courses__list-item" data-js-course-item="{&quot;title&quot;:&quot;Банковское дело&quot;,&quot;duration&quot;:&quot;9 месяцев&quot;}">
@@ -184,7 +184,7 @@
                       <p class="course-card__duration">9 месяцев</p>
                       <h3 class="course-card__title">Аналитик 1С</h3>
                     </div>
-                    <img class="course-card__image" src="/src/assets/images/courses/1c.png">
+                    <img srcset="/lumen/assets/images/1c-320x320.png 320w, /lumen/assets/images/1c-400x400.png 400w, /lumen/assets/images/1c-507x507.png 507w" src="/lumen/assets/images/1c-507x507.png" sizes="(min-width: 507px) 507px, 100vw" width="507" height="507" alt decoding="async" loading="lazy" class="course-card__image">
                   </a>
                 </li>
                 <li class="courses__list-item" data-js-course-item="{&quot;title&quot;:&quot;Банковское дело&quot;,&quot;duration&quot;:&quot;9 месяцев&quot;}">
@@ -194,7 +194,7 @@
                       <p class="course-card__duration">9 месяцев</p>
                       <h3 class="course-card__title">Data-аналитик</h3>
                     </div>
-                    <img class="course-card__image" src="/src/assets/images/courses/data.png">
+                    <img srcset="/lumen/assets/images/data-320x320.png 320w, /lumen/assets/images/data-400x400.png 400w, /lumen/assets/images/data-507x507.png 507w" src="/lumen/assets/images/data-507x507.png" sizes="(min-width: 507px) 507px, 100vw" width="507" height="507" alt decoding="async" loading="lazy" class="course-card__image">
                   </a>
                 </li>
               </ul>
