--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="header__inner container">
         <div class="header__wrapper">
           <a class="header__logo logo" href="/">
-            <img class="logo__image" src="/logo.png" alt="" width="150" height="60" loading="lazy">
+            <img class="logo__image" src="/lumen/logo.png" alt="" width="150" height="60" loading="lazy">
           </a>
           <button class="header__button burger-button button button--burger button--accent" type="button" data-js-cat-button="">
             <svg class="burger-button__svg" width="30" height="30" viewBox="0 0 100 100">
@@ -428,7 +428,7 @@
               <ul class="slider__list swiper-wrapper">
                 <li class="slider__item swiper-slide">
                   <div class="team__card team-card">
-                    <img class="team-card__image" src="/src/assets/images/people/employee.jpg" alt="Фото сотрудника">
+                    <img srcset="/lumen/assets/images/employee-320x480.jpg 320w, /lumen/assets/images/employee-400x600.jpg 400w, /lumen/assets/images/employee-600x900.jpg 600w" src="/lumen/assets/images/employee-600x900.jpg" sizes="(min-width: 600px) 600px, 100vw" width="600" height="900" alt="Фото сотрудника" decoding="async" loading="lazy" class="team-card__image">
                     <div class="team-card__description">
                       <h3 class="team-card__title">Александра Никитина</h3>
                       <p class="team-card__subtitle">Интернет-маркетолог</p>
@@ -437,7 +437,7 @@
                 </li>
                 <li class="slider__item swiper-slide">
                   <div class="team__card team-card">
-                    <img class="team-card__image" src="/src/assets/images/people/man.jpg" alt="Фото сотрудника">
+                    <img srcset="/lumen/assets/images/man-320x480.jpg 320w, /lumen/assets/images/man-400x600.jpg 400w, /lumen/assets/images/man-640x960.jpg 640w, /lumen/assets/images/man-800x1200.jpg 800w" src="/lumen/assets/images/man-800x1200.jpg" sizes="(min-width: 800px) 800px, 100vw" width="800" height="1200" alt="Фото сотрудника" decoding="async" loading="lazy" class="team-card__image">
                     <div class="team-card__description">
                       <h3 class="team-card__title">Виталий Абрамов</h3>
                       <p class="team-card__subtitle">Frontend-разработчик</p>
@@ -446,7 +446,7 @@
                 </li>
                 <li class="slider__item swiper-slide">
                   <div class="team__card team-card">
-                    <img class="team-card__image" src="/src/assets/images/people/employee.jpg" alt="Фото сотрудника">
+                    <img srcset="/lumen/assets/images/employee-320x480.jpg 320w, /lumen/assets/images/employee-400x600.jpg 400w, /lumen/assets/images/employee-600x900.jpg 600w" src="/lumen/assets/images/employee-600x900.jpg" sizes="(min-width: 600px) 600px, 100vw" width="600" height="900" alt="Фото сотрудника" decoding="async" loading="lazy" class="team-card__image">
                     <div class="team-card__description">
                       <h3 class="team-card__title">Александра Никитина</h3>
                       <p class="team-card__subtitle">Frontend-разработчик</p>
@@ -455,7 +455,7 @@
                 </li>
                 <li class="slider__item swiper-slide">
                   <div class="team__card team-card">
-                    <img class="team-card__image" src="/src/assets/images/people/man-2.jpg" alt="Фото сотрудника">
+                    <img srcset="/lumen/assets/images/man-2-320x480.jpg 320w, /lumen/assets/images/man-2-400x600.jpg 400w, /lumen/assets/images/man-2-640x960.jpg 640w, /lumen/assets/images/man-2-800x1200.jpg 800w, /lumen/assets/images/man-2-1024x1536.jpg 1024w, /lumen/assets/images/man-2-1280x1920.jpg 1280w, /lumen/assets/images/man-2-1334x2000.jpg 1334w" src="/lumen/assets/images/man-2-1334x2000.jpg" sizes="(min-width: 1334px) 1334px, 100vw" width="1334" height="2000" alt="Фото сотрудника" decoding="async" loading="lazy" class="team-card__image">
                     <div class="team-card__description">
                       <h3 class="team-card__title">Никита Логинов</h3>
                       <p class="team-card__subtitle">Backend-разработчик</p>
@@ -464,7 +464,7 @@
                 </li>
                 <li class="slider__item swiper-slide">
                   <div class="team__card team-card">
-                    <img class="team-card__image" src="/src/assets/images/people/employee.jpg" alt="Фото сотрудника">
+                    <img srcset="/lumen/assets/images/employee-320x480.jpg 320w, /lumen/assets/images/employee-400x600.jpg 400w, /lumen/assets/images/employee-600x900.jpg 600w" src="/lumen/assets/images/employee-600x900.jpg" sizes="(min-width: 600px) 600px, 100vw" width="600" height="900" alt="Фото сотрудника" decoding="async" loading="lazy" class="team-card__image">
                     <div class="team-card__description">
                       <h3 class="team-card__title">Александра Никитина</h3>
                       <p class="team-card__subtitle">Frontend-разработчик</p>
@@ -473,7 +473,7 @@
                 </li>
                 <li class="slider__item swiper-slide">
                   <div class="team__card team-card">
-                    <img class="team-card__image" src="/src/assets/images/people/man.jpg" alt="Фото сотрудника">
+                    <img srcset="/lumen/assets/images/man-320x480.jpg 320w, /lumen/assets/images/man-400x600.jpg 400w, /lumen/assets/images/man-640x960.jpg 640w, /lumen/assets/images/man-800x1200.jpg 800w" src="/lumen/assets/images/man-800x1200.jpg" sizes="(min-width: 800px) 800px, 100vw" width="800" height="1200" alt="Фото сотрудника" decoding="async" loading="lazy" class="team-card__image">
                     <div class="team-card__description">
                       <h3 class="team-card__title">Виталий Абрамов</h3>
                       <p class="team-card__subtitle">Frontend-разработчик</p>
@@ -488,7 +488,7 @@
     </main>
     <footer class="footer">
       <a class="logo" href="/">
-        <img class="logo__image" src="/logo.png" alt="" width="150" height="60" loading="lazy">
+        <img class="logo__image" src="/lumen/logo.png" alt="" width="150" height="60" loading="lazy">
       </a>
       <div class="footer__column">
         <h3 class="footer__column-title">Направления</h3>
